[package]
authors = ["RetroRick"]
description = "A simple implementation of the observer pattern with variadic template arguments"
edition = "2021"
license = "MIT"
keywords = ["design-patterns"]
name = "rs-obs-signal"
readme = "README.md"
repository = "https://github.com/RetroRick/rust-signal"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
